--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
-	
-  <head>
-    <title>Memory Game</title>
-  </head>
+<html>
+<head>
+  <title>Memory Game</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+  <nav class="clearfix">
+    <a href="#Instructions">Instructions</a>
+    <a href="#Board">Game</a>
+  </nav>
   
-    <nav class="clearfix">
-      <a href="#">Instructions</a>
-      <a href="#">Game</a>
-    </nav>
-    
-    <body>
-    	<h1>Memory Game</h1>
-    	<h2>Instructions</h2>
-    	<p>
-    		Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are         flipped face up over each turn. The object of the game is to turn over pairs of matching cards.
-    	</p>
-    	
-    	<div class="board">
-		<div class="card"></div>
-		<div class="card"></div>
-		<div class="card"></div>
-		<div class="card"></div>
-  	</div>
-  
-  	<footer>
-  		Created with &hearts; by <span class="name">GA</span>
-	</footer>
+  <hr>
+  <header>
+  <h1>Memory Game.</h1>
+  <a name="Instructions"></a>
+  <h2>Instructions</h2>
+  <p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
+  <h4>Can you memorize where the like cards are located?</h4>
+  <hr>
+  </header>
 
-     </body>
-
-
+  <a name="Board"></a>
+  <div class="board">
+    <div class="card"></div>
+    <div class="card"></div>
+    <div class="card"></div>
+    <div class="card"></div>
+  </div>
+  <footer>
+  Created with <span class="name">&hearts;</span> by <span class="name">Marc Fournier</span>
+  <p>Find me on <a href="https://www.linkedin.com/in/marc-fournier-285809b4"><button id="LI">Linked<span>in</span></button></a>!</p>
+  </footer>
+  <script type="text/javascript" src="main.js"></script>
+</body>
 </html>
