Added if statement logic. Removed html card divs and used JS to create card divs.

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -21,11 +21,11 @@
   </header>
 
   <a name="Board"></a>
-  <div class="board">
+  <div class="board" id="game-board">
+    <!--<div class="card"></div>
     <div class="card"></div>
     <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
+    <div class="card"></div>-->
   </div>
   <footer>
   Created with <span class="name">&hearts;</span> by <span class="name">Marc Fournier</span>
